fixes after manual tests
